# RLIV_GS

./: CMakeLists.txt  README.md  package.xml
config/: camera_model.yaml  camera_model_hk.yaml  config.yaml
include/rliv_gs/: rlivgs_system.hpp
include/rliv_gs/common/: config.hpp  parameter.hpp  utils.hpp
include/rliv_gs/frontend/: esikf.hpp  system_state.hpp
include/rliv_gs/map/: map_manager.hpp  visual_map.hpp  voxel_map.hpp
include/rliv_gs/map/visual_elements/: frame.hpp  patch.hpp  point.hpp
include/rliv_gs/sensor/: sensor_evaluator.hpp  sensor_measurement.hpp  sensor_publisher.hpp  sensor_subscriber.hpp
launch/: mapping.launch
log/: data2.txt  dt.py  dt.txt  plot.py  pridicted_state.txt  updated_state.txt
rviz_cfg/: mapping.rviz
src/: main.cpp  rlivgs_system.cpp
src/common/: config.cpp  utils.cpp
src/frontend/: esikf.cpp  system_state.cpp
src/map/: map_manager.cpp  visual_map.cpp  voxel_map.cpp
src/map/visual_elements/: frame.cpp  patch.cpp  point.cpp
src/sensor/: sensor_evaluator.cpp  sensor_publisher.cpp  sensor_subscriber.cpp
vikit_common/: CMakeLists.txt
